--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -2,70 +2,83 @@
   id="sidebar"
   class="w-64 min-h-screen bg-white border-r shadow-lg fixed inset-y-0 left-0 z-40 transform -translate-x-full md:translate-x-0 transition-transform duration-300 flex flex-col"
 >
-  <!-- Top: Logo + Business Info -->
+  <!-- Top Section: Logo + Business Name -->
   <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow" />
     <div class="overflow-hidden">
-      <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-      <p class="text-sm text-gray-500 truncate">Admin</p>
+      <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">TidyZenic</h1>
+      <p class="text-sm text-gray-500 truncate">Admin Panel</p>
     </div>
   </div>
 
   <!-- Navigation -->
-  <nav class="flex-1 overflow-y-auto px-4 py-6 space-y-1 text-sm font-medium">
+  <nav class="flex-1 overflow-y-auto px-4 py-6 text-sm space-y-2 font-medium text-gray-700">
+    <!-- Section: Dashboard -->
     <a href="/admin/dashboard" class="nav-link">
-      <svg class="w-5 h-5 text-blue-500" fill="currentColor" viewBox="0 0 20 20">
+      <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
         <path d="M10.707 1.293a1 1 0 00-1.414 0L1 9.586V18a2 2 0 002 2h5v-6h4v6h5a2 2 0 002-2V9.586l-8.293-8.293z" />
       </svg>
-      Dashboard
+      <span>Dashboard</span>
     </a>
 
-    <!-- Submenu (e.g., Website Tools) -->
-    <div class="space-y-1">
-      <button
-        class="nav-link w-full justify-between"
-        onclick="toggleSubmenu('websiteToolsSubmenu')"
-      >
+    <!-- Section: Website -->
+    <div>
+      <button onclick="toggleSubmenu('websiteToolsSubmenu')" class="nav-link w-full justify-between">
         <span class="flex items-center gap-3">
-          <svg class="w-5 h-5 text-blue-500" fill="currentColor" viewBox="0 0 24 24">
+          <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
             <path d="M4 5h16v14H4V5zm2 2v2h12V7H6zm0 4v6h12v-6H6z" />
           </svg>
           Website Tools
         </span>
-        <svg id="icon-websiteToolsSubmenu" class="w-4 h-4 transform transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <svg id="icon-websiteToolsSubmenu" class="w-4 h-4 transition-transform" viewBox="0 0 20 20" fill="currentColor">
           <path d="M6 8l4 4 4-4" />
         </svg>
       </button>
-      <div id="websiteToolsSubmenu" class="ml-7 space-y-1 hidden">
+      <div id="websiteToolsSubmenu" class="ml-7 mt-1 hidden flex flex-col gap-1">
         <a href="/admin/website" class="submenu-link">Website Builder</a>
         <a href="/admin/forms" class="submenu-link">Forms</a>
         <a href="/admin/domains" class="submenu-link">Domains</a>
       </div>
     </div>
 
+    <!-- Section: CRM -->
+    <div>
+      <button onclick="toggleSubmenu('crmSubmenu')" class="nav-link w-full justify-between">
+        <span class="flex items-center gap-3">
+          <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M16 11c1.66 0 2.99 1.34 2.99 3L19 18h-2v-4H7v4H5v-4c0-1.66 1.34-3 3-3h8zm0-2H8c-1.1 0-2-.9-2-2s.9-2 2-2h8c1.1 0 2 .9 2 2s-.9 2-2 2z"/>
+          </svg>
+          CRM Tools
+        </span>
+        <svg id="icon-crmSubmenu" class="w-4 h-4 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M6 8l4 4 4-4" />
+        </svg>
+      </button>
+      <div id="crmSubmenu" class="ml-7 mt-1 hidden flex flex-col gap-1">
+        <a href="/admin/contacts" class="submenu-link">Contacts</a>
+        <a href="/admin/leads" class="submenu-link">Leads</a>
+        <a href="/admin/pipelines" class="submenu-link">Pipelines</a>
+      </div>
+    </div>
+
+    <!-- Section: Settings -->
     <a href="/admin/settings" class="nav-link">
-      <svg class="w-5 h-5 text-blue-500" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M12 8a4 4 0 100 8 4 4 0 000-8zm0-6a2 2 0 012 2v1.1c.7.1 1.4.3 2 .6l.8-.8a2 2 0 112.8 2.8l-.8.8c.3.6.5 1.3.6 2H20a2 2 0 012 2v1a2 2 0 01-2 2h-1.1a7.6 7.6 0 01-.6 2l.8.8a2 2 0 11-2.8 2.8l-.8-.8a7.6 7.6 0 01-2 .6V20a2 2 0 01-2 2h-1a2 2 0 01-2-2v-1.1a7.6 7.6 0 01-2-.6l-.8.8a2 2 0 11-2.8-2.8l.8-.8a7.6 7.6 0 01-.6-2H4a2 2 0 01-2-2v-1a2 2 0 012-2h1.1c.1-.7.3-1.4.6-2l-.8-.8a2 2 0 112.8-2.8l.8.8c.6-.3 1.3-.5 2-.6V4a2 2 0 012-2h1z" />
+      <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 8a4 4 0 100 8 4 4 0 000-8zM4 4h2v2H4zM4 18h2v2H4zM18 4h2v2h-2zM18 18h2v2h-2z" />
       </svg>
-      Settings
+      <span>Settings</span>
     </a>
   </nav>
 
-  <!-- Bottom CTA -->
+  <!-- CTA + Logout -->
   <div class="px-4 py-4 border-t bg-white space-y-2">
-    <a
-      href="/admin/book"
-      class="w-full flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md text-sm font-medium shadow"
-    >
+    <a href="/admin/book" class="w-full flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md text-sm font-medium shadow">
       <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 20 20">
         <path d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zM4 8h12v8H4V8z" />
       </svg>
       Add Booking
     </a>
-    <a
-      href="/logout"
-      class="flex items-center justify-center gap-2 text-red-500 hover:underline text-sm transition"
-    >
+    <a href="/logout" class="flex items-center justify-center gap-2 text-red-500 hover:underline text-sm transition">
       <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
         <path d="M3 3a1 1 0 011-1h6a1 1 0 110 2H5v12h5a1 1 0 110 2H4a1 1 0 01-1-1V3zm11.293 2.293a1 1 0 011.414 0L20 10l-4.293 4.707a1 1 0 01-1.414-1.414L16.586 11H9a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" />
       </svg>
@@ -74,7 +87,7 @@
   </div>
 </aside>
 
-<!-- Toggle for mobile -->
+<!-- Hamburger Button for Mobile -->
 <button
   id="sidebarToggle"
   class="fixed top-4 left-4 z-50 p-2 bg-white rounded-md shadow-md md:hidden"
@@ -92,15 +105,25 @@
     document.getElementById("sidebar").classList.toggle("-translate-x-full");
   });
 
-  // Toggle submenus
+  // Toggle any submenu by ID
   function toggleSubmenu(id) {
     const submenu = document.getElementById(id);
     const icon = document.getElementById("icon-" + id);
-    submenu.classList.toggle("hidden");
-    icon.classList.toggle("rotate-180");
+    if (submenu && icon) {
+      submenu.classList.toggle("hidden");
+      icon.classList.toggle("rotate-180");
+    }
   }
 
-  // Fetch business info
+  // Highlight active link
+  const currentPath = window.location.pathname;
+  document.querySelectorAll("a.nav-link, a.submenu-link").forEach(link => {
+    if (link.getAttribute("href") === currentPath) {
+      link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
+    }
+  });
+
+  // Fetch logo + business name
   fetch('/api/business/public')
     .then(res => res.json())
     .then(data => {
@@ -112,22 +135,14 @@
       }
     })
     .catch(() => {});
-
-  // Highlight active link
-  const currentPath = window.location.pathname;
-  document.querySelectorAll("a.nav-link, a.submenu-link").forEach(link => {
-    if (link.getAttribute("href") === currentPath) {
-      link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
-    }
-  });
 </script>
 
-<!-- Styles (only used classes) -->
+<!-- Styles (Tailwind-based) -->
 <style>
   .nav-link {
-    @apply flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition;
+    @apply flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition text-gray-700;
   }
   .submenu-link {
-    @apply block text-gray-600 hover:text-blue-600 transition px-3 py-1 rounded;
+    @apply text-gray-600 hover:text-blue-600 px-3 py-1 rounded transition text-sm;
   }
 </style>
