--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -2,18 +2,18 @@
   id="sidebar"
   class="w-64 min-h-screen bg-white border-r shadow-lg fixed inset-y-0 left-0 z-40 transform -translate-x-full md:translate-x-0 transition-transform duration-300 flex flex-col"
 >
-  <!-- Top Section: Logo + Business Name -->
+  <!-- Header: Logo & Business Info -->
   <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow" />
     <div class="overflow-hidden">
-      <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">TidyZenic</h1>
+      <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
       <p class="text-sm text-gray-500 truncate">Admin Panel</p>
     </div>
   </div>
 
   <!-- Navigation -->
-  <nav class="flex-1 overflow-y-auto px-4 py-6 text-sm space-y-2 font-medium text-gray-700">
-    <!-- Section: Dashboard -->
+  <nav class="flex-1 overflow-y-auto px-4 py-6 text-sm font-medium text-gray-700 space-y-2">
+    <!-- Dashboard -->
     <a href="/admin/dashboard" class="nav-link">
       <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
         <path d="M10.707 1.293a1 1 0 00-1.414 0L1 9.586V18a2 2 0 002 2h5v-6h4v6h5a2 2 0 002-2V9.586l-8.293-8.293z" />
@@ -21,16 +21,16 @@
       <span>Dashboard</span>
     </a>
 
-    <!-- Section: Website -->
+    <!-- Website Tools -->
     <div>
-      <button onclick="toggleSubmenu('websiteToolsSubmenu')" class="nav-link w-full justify-between">
+      <button class="nav-link w-full justify-between" data-toggle="websiteToolsSubmenu">
         <span class="flex items-center gap-3">
           <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
             <path d="M4 5h16v14H4V5zm2 2v2h12V7H6zm0 4v6h12v-6H6z" />
           </svg>
           Website Tools
         </span>
-        <svg id="icon-websiteToolsSubmenu" class="w-4 h-4 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <svg id="icon-websiteToolsSubmenu" class="w-4 h-4 transition-transform" fill="currentColor" viewBox="0 0 20 20">
           <path d="M6 8l4 4 4-4" />
         </svg>
       </button>
@@ -41,27 +41,27 @@
       </div>
     </div>
 
-    <!-- Section: CRM -->
+    <!-- CRM Tools -->
     <div>
-      <button onclick="toggleSubmenu('crmSubmenu')" class="nav-link w-full justify-between">
+      <button class="nav-link w-full justify-between" data-toggle="crmToolsSubmenu">
         <span class="flex items-center gap-3">
           <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M16 11c1.66 0 2.99 1.34 2.99 3L19 18h-2v-4H7v4H5v-4c0-1.66 1.34-3 3-3h8zm0-2H8c-1.1 0-2-.9-2-2s.9-2 2-2h8c1.1 0 2 .9 2 2s-.9 2-2 2z"/>
+            <path d="M16 11c1.66 0 2.99 1.34 2.99 3L19 18h-2v-4H7v4H5v-4c0-1.66 1.34-3 3-3h8zm0-2H8c-1.1 0-2-.9-2-2s.9-2 2-2h8c1.1 0 2 .9 2 2s-.9 2-2 2z" />
           </svg>
           CRM Tools
         </span>
-        <svg id="icon-crmSubmenu" class="w-4 h-4 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <svg id="icon-crmToolsSubmenu" class="w-4 h-4 transition-transform" fill="currentColor" viewBox="0 0 20 20">
           <path d="M6 8l4 4 4-4" />
         </svg>
       </button>
-      <div id="crmSubmenu" class="ml-7 mt-1 hidden flex flex-col gap-1">
+      <div id="crmToolsSubmenu" class="ml-7 mt-1 hidden flex flex-col gap-1">
         <a href="/admin/contacts" class="submenu-link">Contacts</a>
         <a href="/admin/leads" class="submenu-link">Leads</a>
         <a href="/admin/pipelines" class="submenu-link">Pipelines</a>
       </div>
     </div>
 
-    <!-- Section: Settings -->
+    <!-- Settings -->
     <a href="/admin/settings" class="nav-link">
       <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 24 24">
         <path d="M12 8a4 4 0 100 8 4 4 0 000-8zM4 4h2v2H4zM4 18h2v2H4zM18 4h2v2h-2zM18 18h2v2h-2z" />
@@ -70,7 +70,7 @@
     </a>
   </nav>
 
-  <!-- CTA + Logout -->
+  <!-- CTA and Logout -->
   <div class="px-4 py-4 border-t bg-white space-y-2">
     <a href="/admin/book" class="w-full flex items-center justify-center gap-2 bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md text-sm font-medium shadow">
       <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 20 20">
@@ -87,7 +87,7 @@
   </div>
 </aside>
 
-<!-- Hamburger Button for Mobile -->
+<!-- Mobile Hamburger Toggle -->
 <button
   id="sidebarToggle"
   class="fixed top-4 left-4 z-50 p-2 bg-white rounded-md shadow-md md:hidden"
@@ -98,51 +98,57 @@
   </svg>
 </button>
 
-<!-- Scripts -->
+<!-- JavaScript (CSP-Safe) -->
 <script>
-  // Toggle sidebar (mobile)
-  document.getElementById("sidebarToggle").addEventListener("click", () => {
-    document.getElementById("sidebar").classList.toggle("-translate-x-full");
-  });
+  document.addEventListener("DOMContentLoaded", () => {
+    // Mobile sidebar toggle
+    document.getElementById("sidebarToggle")?.addEventListener("click", () => {
+      document.getElementById("sidebar").classList.toggle("-translate-x-full");
+    });
 
-  // Toggle any submenu by ID
-  function toggleSubmenu(id) {
-    const submenu = document.getElementById(id);
-    const icon = document.getElementById("icon-" + id);
-    if (submenu && icon) {
-      submenu.classList.toggle("hidden");
-      icon.classList.toggle("rotate-180");
-    }
-  }
+    // Submenu toggling
+    document.querySelectorAll("[data-toggle]").forEach(btn => {
+      const targetId = btn.getAttribute("data-toggle");
+      const submenu = document.getElementById(targetId);
+      const icon = document.getElementById("icon-" + targetId);
 
-  // Highlight active link
-  const currentPath = window.location.pathname;
-  document.querySelectorAll("a.nav-link, a.submenu-link").forEach(link => {
-    if (link.getAttribute("href") === currentPath) {
-      link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
-    }
-  });
+      btn.addEventListener("click", () => {
+        if (submenu && icon) {
+          submenu.classList.toggle("hidden");
+          icon.classList.toggle("rotate-180");
+        }
+      });
+    });
 
-  // Fetch logo + business name
-  fetch('/api/business/public')
-    .then(res => res.json())
-    .then(data => {
-      if (data.business_name) {
-        document.getElementById('bizName').textContent = data.business_name;
+    // Highlight active link
+    const currentPath = window.location.pathname;
+    document.querySelectorAll("a.nav-link, a.submenu-link").forEach(link => {
+      if (link.getAttribute("href") === currentPath) {
+        link.classList.add("bg-blue-100", "text-blue-700", "font-semibold");
       }
-      if (data.logo_filename) {
-        document.getElementById('logo').src = '/uploads/' + data.logo_filename;
-      }
-    })
-    .catch(() => {});
+    });
+
+    // Business info fetch
+    fetch('/api/business/public')
+      .then(res => res.json())
+      .then(data => {
+        if (data.business_name) {
+          document.getElementById('bizName').textContent = data.business_name;
+        }
+        if (data.logo_filename) {
+          document.getElementById('logo').src = '/uploads/' + data.logo_filename;
+        }
+      })
+      .catch(() => {});
+  });
 </script>
 
-<!-- Styles (Tailwind-based) -->
+<!-- Tailwind Utility Styles -->
 <style>
   .nav-link {
-    @apply flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition text-gray-700;
+    @apply flex items-center gap-3 px-3 py-2 rounded hover:bg-blue-50 transition;
   }
   .submenu-link {
-    @apply text-gray-600 hover:text-blue-600 px-3 py-1 rounded transition text-sm;
+    @apply text-gray-600 hover:text-blue-600 px-3 py-1 rounded transition;
   }
 </style>
